# nvbench_bazel_demo

./: .bazelrc  .gitattributes  README.md  WORKSPACE
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
benchmark/: BUILD.bazel  rules.bzl
