load("@rules_cuda//cuda:defs.bzl", "cuda_library")
load("//benchmark:rules.bzl", "nvbench_is_buildable")

cuda_library(
    name = "example",
    srcs = ["example.cu"],
    copts = ["-std=c++17"],
    target_compatible_with = nvbench_is_buildable(),
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_nvbench//:nvbench_include",
        "@com_github_nvbench//:nvbench_main",
        "@local_cuda//:cuda",
        "@rules_cuda//cuda:runtime",
    ],
    alwayslink = 1,
)

cc_binary(
    name = "example_binary",
    srcs = ["@com_github_nvbench//:nvbench_shared"],
    visibility = ["//visibility:public"],
    deps = [
        ":example",
    ],
)
